# ddd-demo

./: pyproject.toml
src/: app.py
src/customer/: __init__.py
src/customer/api/: __init__.py  dependencies.py
src/customer/api/routes/: __init__.py  customer_routes.py
src/customer/application/dtos/: __init__.py  customer_dto.py
src/customer/application/use_cases/: __init__.py  create_customer.py
src/customer/domain/: customer.py
src/customer/domain/events/: customer_created_event.py
src/customer/domain/repositories/: customer_repository.py
src/customer/domain/value_objects/: email.py
src/customer/infrastructure/: __init__.py
src/customer/infrastructure/persistence/: in_memory_customer_repository.py
src/customers/api/: dependencies.py  router.py
src/customers/api/v1/: router.py
src/customers/api/v1/customers/: post_create_customer.py  router.py
src/customers/application/dtos/: __init__.py  customer_dto.py
src/customers/application/use_cases/: __init__.py  create_customer.py
src/customers/domain/events/: __init__.py  customer_email_updated_event.py
src/customers/domain/repositories/: __init__.py
src/customers/domain/value_objects/: __init__.py  customer_name.py
src/customers/infrastructure/persistence/: __init__.py  in_memory_customer_repository.py
src/domain/: __init__.py  adapter.py  aggregate.py  domain_event.py  entity.py  repository.py  value_object.py
src/jobs/domain/: job.py
src/jobs/domain/states/: base.py  completed_state.py  created_state.py  failed_state.py  running_state.py
tests/: test_customer_api.py
