[project]
name = "ddd-demo"
version = "0.1.0"
description = "This is a Domain-Driven Design demo repo."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "pytest>=9.0.2",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "azure-cosmos>=4.5.0",
    "boto3>=1.34.0",
]
